# gorder

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-checks.yml  test-checks.yml
examples/: README.md
examples/atomistic/: 1_basic.yaml  2_leafletwise.yaml  3_vesicles.yaml  4_ordermaps.yaml  5_estimate_error.yaml
examples/coarse_grained/: 1_basic.yaml  2_leafletwise.yaml  3_vesicles.yaml  4_ordermaps.yaml  5_estimate_error.yaml
examples/python/: 1_basic_atomistic.py  2_basic_coarse_grained.py  3_basic_united_atom.py  4_leafletwise.py  5_vesicle.py  6_ordermaps.py  7_estimate_error.py  8_collecting_data.py
examples/united_atom/: 1_basic.yaml  2_leafletwise.yaml  3_vesicles.yaml  4_ordermaps.yaml  5_estimate_error.yaml
performance/: README.md  export_benchmarks.md  leaflets_benchmarks.md  main_benchmarks.md
pygorder/: Cargo.toml  DEV-README.md  README.md  make_types.sh  pyproject.toml
pygorder/docs/source/: conf.py  introduction.rst
pygorder/python/gorder/: __init__.py  __init__.pyi  analysis_types.pyi  estimate_error.pyi  exceptions.pyi  geometry.pyi  leaflets.pyi  membrane_normal.pyi  ordermap.pyi  results.pyi
pygorder/src/: analysis.rs  estimate_error.rs  geometry.rs  leaflets.rs  lib.rs  normal.rs  ordermap.rs  results.rs
pygorder/tests/: test_run_access.py  test_run_write.py
python/: .gitignore  Cargo.toml  pyproject.toml
python/docs/source/: conf.py  index.rst  installation.rst
python/src/: analysis.rs  estimate_error.rs  geometry.rs  leaflets.rs  lib.rs  normal.rs  ordermap.rs  results.rs
python/tests/: test_gorder.py
scripts/: plot.py
src/: aaorder.rs  analysis.rs  auxiliary.rs  axis.rs  errors.rs  leaflets.rs  lib.rs  main.rs  molecule.rs  ordermap.rs  topology.rs
src/analysis/: aaorder.rs  auxiliary.rs  cgorder.rs  clustering.rs  common.rs  dynamic.rs  geometry.rs  index.rs  leaflets.rs  mod.rs  molecule.rs  normal.rs  order.rs  ordermap.rs  orderval.rs  pbc.rs  spinner.rs  structure.rs  timewise.rs  topology.rs  uaorder.rs  united.rs
src/analysis/topology/: atom.rs  bond.rs  classify.rs  mod.rs  molecule.rs  uatom.rs
src/application/: mod.rs
src/input/: analysis.rs  axis.rs  estimate_error.rs  frequency.rs  geometry.rs  leaflets.rs  membrane_normal.rs  mod.rs  ordermap.rs
src/lanczos/: README.md  hermitian.rs  mod.rs
src/presentation/: aapresenter.rs  aaresults.rs  cgpresenter.rs  cgresults.rs  convergence.rs  converter.rs  csv_presenter.rs  leaflets.rs  mod.rs  normals.rs  ordermap.rs  ordermaps_presenter.rs  tab_presenter.rs  uaresults.rs  xvg_presenter.rs  yaml_presenter.rs
tests/: tests.rs  tests_aa.rs  tests_bin.rs  tests_cg.rs  tests_ua.rs
tests/common/: mod.rs
tests/files/: aa_leaflets_every1.yaml  aa_leaflets_every5.yaml  aa_leaflets_once.yaml  aa_order_basic.csv  aa_order_basic.tab  aa_order_basic.yaml  aa_order_basic_POPC.xvg  aa_order_basic_POPE.xvg  aa_order_basic_POPG.xvg  aa_order_begin_end.yaml  aa_order_begin_end_step.yaml  aa_order_buckled.yaml  aa_order_buckled_leaflets.yaml  aa_order_convergence.xvg  aa_order_convergence_s5.xvg  aa_order_cuboid_dynamic.yaml  aa_order_cuboid_nopbc.yaml  aa_order_cuboid_patch.yaml  aa_order_cuboid_square.yaml  aa_order_cylinder.yaml  aa_order_cylinder_dynamic.yaml  aa_order_cylinder_nopbc.yaml  aa_order_cylinder_x.yaml  aa_order_different_hydrogen_numbers.csv  aa_order_different_hydrogen_numbers.tab  aa_order_error.csv  aa_order_error.tab  aa_order_error.yaml  aa_order_error_blocks10.yaml  aa_order_error_leaflets.csv  aa_order_error_leaflets.tab  aa_order_error_leaflets.yaml  aa_order_error_leaflets_limit.csv  aa_order_error_leaflets_limit.tab  aa_order_error_leaflets_limit.yaml  aa_order_error_leaflets_nopbc.yaml  aa_order_error_limit.csv  aa_order_error_limit.tab  aa_order_error_limit.yaml  aa_order_leaflets.csv  (+139 more)
tests/files/asymmetric/: aa_asym.tpr  aa_order_asymmetric.csv  aa_order_asymmetric.tab  aa_order_asymmetric.yaml  aa_order_asymmetric_POPC.xvg  aa_order_asymmetric_POPE.xvg  aa_order_asymmetric_errors.csv  aa_order_asymmetric_errors.tab  aa_order_asymmetric_errors.yaml  cg_asym.tpr  cg_asym.xtc  cg_order_asymmetric.csv  cg_order_asymmetric.tab  cg_order_asymmetric.yaml  cg_order_asymmetric_POPE.xvg  cg_order_asymmetric_POPG.xvg  cg_order_asymmetric_errors.csv  cg_order_asymmetric_errors.tab  cg_order_asymmetric_errors.yaml
tests/files/bonds/: complex.bnd  could_not_parse_1.bnd  could_not_parse_2.bnd  self-bonding.bnd  simple.bnd
tests/files/inputs/: aa_clustering.yaml  aa_leaflets_no_pbc.yaml  atom_overlap_error.yaml  basic.yaml  basic_aa.yaml  basic_aa_config_fails.yaml  basic_aa_for_python.yaml  basic_ua.yaml  begin_higher.yaml  cg_fail_nonexistent_traj.yaml  concatenate_estimate_error_cg.yaml  cuboid_invalid_dimension.yaml  cylinder.yaml  cylinder_invalid_span.yaml  cylinder_negative_height.yaml  cylinder_negative_radius.yaml  (+50 more)
(+191 files in other folders)
