[package]
name = "gorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ladme/gorder"
keywords = ["gromacs", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests"]

[dependencies]
backitup = "0.1.1"
groan_rs = { version = "0.9.0-dev.2", features = ["parallel"] }
colored = "2.1"
thiserror = "2.0.3"
derive_builder = "0.20.2"
getset = "0.1.3"
log = "0.4.22"
hashbrown = "0.15.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.6.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colog = "1.3.0"
once_cell = "1.20.2"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.14.0"
