[package]
name = "gorder"
version = "0.6.0-dev.1"
description = "Calculating lipid order parameters from Gromacs simulations"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/Ladme/gorder"
keywords = ["gromacs", "molecular-dynamics", "order", "nmr", "lipids"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests", "/validation"]

[dependencies]
backitup = "0.1.1"
groan_rs = { version = "0.10.0-dev.3", features = [
    "parallel",
    "chemfiles",
    "serde",
] }
colored = "2.1"
thiserror = "2.0.3"
derive_builder = "0.20.2"
getset = "0.1.3"
log = "0.4.22"
hashbrown = { version = "0.15.2", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.7.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
colog = "1.3.0"
once_cell = "1.20.2"
statistical = "1.0.0"
strum_macros = "0.26.4"
parking_lot = "0.12.3"
nalgebra = "0.33.2"
glob = "0.3.2"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.14.0"
assert_cmd = "2.0.16"
rand = "0.8.5"
