[package]
name = "gorder"
version = "0.7.2"
description = "Calculating lipid order parameters from Gromacs simulations"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/Ladme/gorder"
keywords = ["gromacs", "molecular-dynamics", "order", "nmr", "lipids"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests", "/validation", "/pygorder", "/examples"]

[dependencies]
backitup = "0.1.2"
groan_rs = { version = "0.10.0-dev.5", features = ["parallel", "serde"] }
colored = "3.0.0"
thiserror = "2.0.12"
derive_builder = "0.20.2"
getset = "0.1.3"
log = "0.4.26"
hashbrown = { version = "0.15.2", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2.8.0", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
colog = "1.3.0"
once_cell = "1.21.1"
statistical = "1.0.0"
strum_macros = "0.27.1"
parking_lot = "0.12.3"
nalgebra = "0.33.2"
glob = "0.3.2"
lanczos = "0.2.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.0"
assert_cmd = "2.0.16"
rand = "0.9.0"

[workspace]
members = [".", "pygorder"]
