[package]
name = "pygorder"
version = "1.2.0"
edition = "2021"

[lib]
name = "gorder"
crate-type = ["cdylib", "rlib"]

[dependencies]
gorder_core = { package = "gorder", path = ".." }
hashbrown = "0.15.2"
numpy = "0.24.0"
#pyo3 = { version = "0.24.1", features = ["extension-module"] }
pyo3 = "0.24.1"
colog = "1.3.0"
log = "0.4.22"
ctrlc = "3.4.5"
pyo3-stub-gen = "0.13.1"

[[bin]]
name = "stub_gen"
doc = false
