[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "gorder"
version = "1.1.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = "MIT"

[dependency-groups]
dev = ["numpy>=2.2.3", "pytest>=8.3.4", "pyyaml>=6.0.2"]
