[package]
name = "python"
version = "0.6.0-dev.1"
edition = "2021"

[lib]
name = "gorder"
crate-type = ["cdylib"]

[dependencies]
gorder_core = { package = "gorder", path = ".." }
hashbrown = "0.15.2"
numpy = "0.23.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
colog = "1.3.0"
log = "0.4.22"
ctrlc = "3.4.5"
